--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <section class="trending-product" id="trending">
         <div class="center-text">
-            <h2>Our Trending <span>Products</span></h2>
+            <h2>Our<span>Products</span></h2>
         </div>
 
 
